--- a/estilo/style.css
+++ b/estilo/style.css
@@ -41,6 +41,7 @@ header{
     min-height: 150px;
     text-align: center;
     padding-top: 40px;
+    
 }
 
 header > h1 { 
@@ -62,18 +63,21 @@ header > p {
 }
 
 nav {
-    background-color: var(--cor5);
-    padding: 10px;
+    
+    background-color: var(--cor5);    
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.496);
+    
 }
 
 nav > a {
+    display: flex;
     color: var(--cor1);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
     transition-duration: .5s;
+    justify-content: space-between;
 }
 
 nav > a:hover {
